updated slides and pictures

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<section data-background="images/payoff-slide.png">
 				</section>
 				<section>
-                    <img src="images/partup.png" alt=""/>
+                    <img src="images/partup-logo.png" alt=""/>
 					<blockquote>"a smart marketplace for teamwork, matching people into temporary teams"</blockquote>
 				</section>
 				<section>
@@ -82,7 +82,7 @@
 		                    <li>"All inclusive" development environment</li>
                     	</div>
                         <div class="fragment">
-                            <li>Easy onboarding for developers</li>
+                            <li>Loads of (modern) packages</li>
                         </div>
                     </ul>
 				</section>
